Fix one-to-many title overflow

--- a/axelor-front/src/views/form/widgets/one-to-many/one-to-many.module.scss
+++ b/axelor-front/src/views/form/widgets/one-to-many/one-to-many.module.scss
@@ -19,4 +19,5 @@
   margin: 0 1rem;
   display: flex;
   align-items: center;
+  overflow: hidden;
 }
